# manabu-Allergies

./: .env_empty  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
client/: package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
client/src/: app.html
client/src/components/: Alert.svelte  Nav.svelte
client/src/openapi/: runtime.ts
client/src/openapi/.openapi-generator/: FILES
client/src/openapi/apis/: AuthApi.ts  UserApi.ts
client/src/openapi/models/: HTTPValidationError.ts  LocationInner.ts  Token.ts  TokenType.ts  User.ts  UserCreate.ts  UserUpdate.ts  ValidationError.ts  index.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/ranking/: +page.svelte
client/src/routes/reference/: +page.svelte
client/src/routes/scan/: +page.svelte
client/src/routes/settings/: +page.svelte
client/src/routes/signin/: +page.svelte
client/src/routes/signup/: +page.svelte
client/src/store/: auth.ts
client/src/util/: index.ts
migrations/: Dockerfile
migrations/models/: 0_20230303002327_init.py  1_20230329171215_update.py
server/: __init__.py  config.py  pyproject.toml
server/models/db/: __init__.py  auth.py  user.py
server/models/request/: auth.py  user.py
server/models/response/: user.py
server/routes/: __init__.py  auth.py  user.py
